verkar som jag kan plotta en signal i tidsdomänen nu, förstår mig ej på om jag gjort fft:n rätt

--- a/Tester/Portaudio/Makefile
+++ b/Tester/Portaudio/Makefile
@@ -1,9 +1,20 @@
-EXEC = audiocapture
+EXEC = paex_record
+
+EXEC2 = tutorial_cpp_audio_capture
+
+EXEC3 = line_test
 
 CLIB = -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a \
-		-lrt -lasound -ljack -pthread -I./lib/fftw-3.3.10/api -lfftw3
+		-lrt -lasound -ljack -pthread -I./lib/fftw-3.3.10/api -lfftw3 \
+		-I./lib/koolplot1_2
 
 $(EXEC): paex_record.c
+	g++ -o build/$@ $^ $(CLIB)
+
+$(EXEC2): tutorial_cpp_audio_capture.cpp
+	g++ -o build/$@ $^ $(CLIB)
+
+$(EXEC3): plot_line.c
 	g++ -o build/$@ $^ $(CLIB)
 
 install-deps: install-portaudio install-fftw
