--- a/Tester/Portaudio/Makefile
+++ b/Tester/Portaudio/Makefile
@@ -14,7 +14,7 @@ EXEC7 = gpu_beamformer2
 
 EXEC8 = gpu_beamformer3
 
-EXEC9 = myprogram
+EXEC9 = mainprogram
 
 CLIB = -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a \
 		-lrt -lasound -ljack -pthread -I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 #-I./lib/fftw-3.3.10/api -lfftw3 \
@@ -49,7 +49,8 @@ $(EXEC8): GPU/gpu_beamformer3.cu
 
 $(EXEC9): GPU/main.cpp GPU/gpu_beamformer.cu
 	nvcc -gencode arch=compute_62,code=sm_62 -rdc=true $^ -o build/$@ -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a -lrt -lasound -ljack \
-			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/AudioFile/include
+			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/AudioFile/include -I./lib/fftw-3.3.10/api -lfftw3 \
+			-I/usr/local/cuda/inc -L/usr/local/cuda/lib -lcufft
 
 
 install-deps: install-portaudio install-fftw
