det verkar som att multiplikationen i frekvensdomänen fungerar som tänkt

--- a/Tester/Portaudio/Makefile
+++ b/Tester/Portaudio/Makefile
@@ -35,7 +35,7 @@ $(EXEC7): GPU/gpu_beamformer2.cu
 	nvcc -o build/$@ $^ -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a -lrt -lasound -ljack \
 			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8
 
-$(EXEC9): main.cpp CPU/beamformer_wideband.cpp
+$(EXEC9): GPU/main.cpp CPU/beamformer_wideband.cpp
 	nvcc -gencode arch=compute_62,code=sm_62 -rdc=true $^ -o build/$@ -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a -lrt -lasound -ljack \
 			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/AudioFile/include -I./lib/fftw-3.3.10/api -lfftw3f -lm \
 			-I/usr/local/cuda/inc -L/usr/local/cuda/lib -lcufft -I./extern/pybind11
