--- a/Tester/Portaudio/Makefile
+++ b/Tester/Portaudio/Makefile
@@ -57,9 +57,9 @@ $(EXEC12): GPU/main.cpp GPU/gpu_beamformer_wideband.cu
 			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/AudioFile/include -I./lib/fftw-3.3.10/api -lfftw3f -lm \
 			-I/usr/local/cuda/inc -L/usr/local/cuda/lib -lcufft -I./extern/pybind11
 
-$(EXEC13): main.cpp GPU/beamformer.cu
+$(EXEC13): GPU/beamformer.cu
 	nvcc -gencode arch=compute_62,code=sm_62 -rdc=true $^ -o build/$@ -I./lib/portaudio/include ./lib/portaudio/lib/.libs/libportaudio.a -lrt -lasound -ljack \
-			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/AudioFile/include -I./lib/fftw-3.3.10/api -lfftw3f -lm \
+			-I./lib/matplot/include -I /usr/include/python3.8/ -lpython3.8 -lcudadevrt -I./lib/fftw-3.3.10/api -lfftw3f -lm \
 			-I/usr/local/cuda/inc -L/usr/local/cuda/lib -lcufft -I./extern/pybind11
 
 install-deps: install-portaudio install-fftw
