nu verkar cubic spline se rätt ut för statisk input, allt är skrivet med doubles, ska ändra tillbaks till float för att se vad som händer

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ Tester/Beampattern/data/
 Inspelningar/
 Tester/Portaudio/build/
 Tester/Portaudio/lib
-Tester/Portaudio/*.txt
+Tester/Portaudio/txtfiles/*.txt
+Tester/Portaudio/beamformer/__pychache__/
 
